src/tests/integration/snapshots/mosaic__tests__integration__resize_right__cannot_resize_right_when_pane_to_the_left_is_at_minimum_width-6.snap
---
source: src/tests/integration/resize_right.rs
expression: snapshot
---
line│lin5
15-b│lin6
b   │lin7
line│lin8
16-b│lin9
b   │ln10
line│ln11
17-b│ln12
b   │ln13
line│ln14
18-b│ln15
b   │ln16
line│ln17
19-b│ln18
b   │ln19
prom│prom
pt $│pt $
    │    
Bye from 
Mosaic!█ 
