src/tests/integration/snapshots/mosaic__tests__integration__resize_right__cannot_resize_right_when_pane_to_the_left_is_at_minimum_width.snap
---
source: src/tests/integration/resize_right.rs
expression: snapshot
---
█        
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
